виправляє помилки в перекладі

--- a/index.html
+++ b/index.html
@@ -23,15 +23,12 @@
           <h4 class="about-position">Full-stack Developer</h4>
           <h1 class="about-name">Mykhailo Fysiuk</h1>
           <p class="about-user-text">
-            I am from Ukraine and I`m 23 years old. In February of 2022 I
-            arrived to Germany with family visit to mother. After war starts, I
-            stayed here for more time and begun to work as an elecritian in
-            Berlin. I registered by §24 and I have possibility to work. Now I`m
-            studying for Full-stack Developer because I don`t want to work as a
-            builder - it isn`t for me. I`m studying English too because I want
-            to make it better. So, I`m studying everyday without days off,
-            weekends and holidays. Day by day I spend time to learn IT and
-            English, I`m working hard on it and moving at breakneck pace.
+            I am from Ukraine and I`m 23 years old. I registered by §24 and I
+            have possibility to work. Now I`m studying for Full-stack Developer.
+            I`m studying English too because I want to make it better. So, I`m
+            studying everyday without days off, weekends and holidays. Day by
+            day I spend time to learn IT and English, I`m working hard on it and
+            moving at breakneck pace.
           </p>
         </div>
         <!--projects-->
@@ -39,15 +36,6 @@
         <!--Work-->
         <div class="work">
           <h3 class="main-titles">Work Experience</h3>
-          <h4 class="experience-title">
-            If you look at my
-            <a href="https://github.com/SlipuyKamiN" class="organisation"
-              >GitHub page</a
-            >
-            you will know perfectly all about my studying and experience
-          </h4>
-
-          <!--company 1-->
           <div>
             <h4 class="experience-title">
               GoIT Academy
@@ -59,13 +47,15 @@
               >
             </h4>
             <p class="experience-period">
-              29.12.2022 - up to now <span class="line">|</span> Ukraine
+              Work in team, GitHub, HTML, SCSS, CSS, npm
+              <span class="line">|</span>
+              <span class="experience-dates">29.12.2022 - up to now</span>
             </p>
             <ul class="work-list-style">
-              <li>Our amateur team project just for train our skills</li>
-              <li>I am just a member here</li>
-              <li>My section names "Contacts"</li>
-              <li>I finished it by a few hours</li>
+              <li>Our amateur team project is just for train our skills.</li>
+              <li>I am just a member here.</li>
+              <li>My section`s name is "Price".</li>
+              <li>I finished it in a few hours.</li>
             </ul>
           </div>
           <!--company 2-->
@@ -80,17 +70,19 @@
               >
             </h4>
             <p class="experience-period">
-              22.12.2022 - 29.12.2022 <span class="line">|</span> Ukraine
+              Teamwork as Team Lead, GitHub, HTML, SASS, CSS, npm, JavaScript
+              <span class="line">|</span>
+              <span class="experience-dates">22.12.2022 - 29.12.2022</span>
             </p>
             <ul class="work-list-style">
               <li>I was a Team Lead here.</li>
-              <li>Pretty good experience for me</li>
+              <li>Pretty good experience for me.</li>
               <li>
-                All team lead work was on me at this project. I worked day and
-                night, support my team members and help they 24/7
+                All team lead work was on me on this project. I worked day and
+                night, support my team members and help them 24/7.
               </li>
-              <li>I was trained to work in team</li>
-              <li>I got a lot of experience with GitHub, npm, etc</li>
+              <li>I trained to work in team.</li>
+              <li>I got a lot of experience with GitHub, npm, etc.</li>
             </ul>
           </div>
           <!--company 3-->
@@ -101,22 +93,52 @@
                 href="https://slipuykamin.github.io/goit-markup-hw-08/"
                 class="organisation"
               >
-                Donut-Masterclass</a
+                Web-Studio</a
               >
             </h4>
             <p class="experience-period">
-              01.11.2022 - 22.12.2022 <span class="line">|</span> Ukraine
+              HTML, SCSS, CSS <span class="line">|</span>
+              <span class="experience-dates">01.11.2022 - 22.12.2022 </span>
             </p>
             <ul class="work-list-style">
-              <li>My first big project I done myself.</li>
+              <li>My first big project I have done myself.</li>
               <li>
-                In my GitHub page I have 8 repositories with this project and
-                you can look how I was growing step by step, when I was studying
+                On my GitHub page, I have 8 repositories with this project and
+                you can look how I was growing step by step when I was studying.
               </li>
-              <li>It is example of coding quality for me now.</li>
+              <li>It is an example of coding quality for me now.</li>
+              <li>
+                Here I have learned a lot. I very like this project, because I
+                have got a lot of new experiences for me, that I never got
+                before.
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h4 class="experience-title">
+              GoIT Academy
+              <a
+                href="https://slipuykamin.github.io/My_GoIT_resume/"
+                class="organisation"
+              >
+                Resume</a
+              >
+            </h4>
+            <p class="experience-period">
+              HTML, CSS <span class="line">|</span>
+              <span class="experience-dates">23.10.2022 - 01.11.2022 </span>
+            </p>
+            <ul class="work-list-style">
+              <li>You are right here.</li>
+              <li>It is my first small project I have done myself.</li>
+              <li>
+                Do not be afraid of the quality of the code - this is my first
+                job in life.
+              </li>
             </ul>
           </div>
         </div>
+
         <!--Education-->
         <div class="education">
           <h3 class="main-titles">Education</h3>
@@ -125,7 +147,7 @@
           </h4>
           <h5 class="education-faculty">Full-Stack Developer</h5>
           <p class="experience-period">
-            01.11.2022 - up to now | Online studying
+            01.11.2022 - up to now | Remote studying
           </p>
         </div>
       </div>
@@ -146,6 +168,12 @@
               <span class="contact-type">E:</span>
               <a href="mail to:mishayo53@gmail.com" class="contact-link"
                 >mishayo53@gmail.com</a
+              >
+            </p>
+            <p>
+              <span class="contact-type">G:</span>
+              <a href="https://github.com/SlipuyKamiN" class="contact-link"
+                >GitHub page</a
               >
             </p>
           </div>
