add string about German language

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <p class="about-user-text">
             I am from Ukraine and I`m 23 years old. I registered by §24 and I
             have possibility to work. Now I`m studying for Full-stack Developer.
-            I`m studying English too because I want to make it better. So, I`m
+            I`m studying English too because I want to make it better. After consolidating my level of English, I will move on to learning German. So, I`m
             studying everyday without days off, weekends and holidays. Day by
             day I spend time to learn IT and English, I`m working hard on it and
             moving at breakneck pace.
