updates project finish date

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <p class="experience-period">
               Work in team, GitHub, HTML, SCSS, CSS, npm
               <span class="line">|</span>
-              <span class="experience-dates">29.12.2022 - up to now</span>
+              <span class="experience-dates">29.12.2022 - 01.02.2023</span>
             </p>
             <ul class="work-list-style">
               <li>Our amateur team project is just for train our skills.</li>
