updates email address

--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
             </p>
             <p>
               <span class="contact-type">E:</span>
-              <a href="mailto:mishayo53@gmail.com" class="contact-link"
-                >mishayo53@gmail.com</a
+              <a href="mailto:cm040b711mf@gmail.com" class="contact-link"
+                >cm040b711mf@gmail.com</a
               >
             </p>
             <p>
