update work experience

--- a/index.html
+++ b/index.html
@@ -23,19 +23,39 @@
           <h4 class="about-position">Full-stack Developer</h4>
           <h1 class="about-name">Mykhailo Fysiuk</h1>
           <p class="about-user-text">
-            I am from Ukraine and I`m 23 years old. I registered by §24 and I
-            have possibility to work. Now I`m studying for Full-stack Developer.
-            I`m studying English too because I want to make it better. After consolidating my level of English, I will move on to learning German. So, I`m
-            studying everyday without days off, weekends and holidays. Day by
-            day I spend time to learn IT and English, I`m working hard on it and
-            moving at breakneck pace.
+            I am from Ukraine and I`m 23 years old. I have legal permit to work
+            in Germany and is open to work all over the world. Now I`m studying
+            for Full-stack Developer. I`m studying English too because I want to
+            make it better. After consolidating my level of English, I will move
+            on to learning German. So, I`m studying everyday without days off,
+            weekends and holidays. Day by day I spend time to learn IT and
+            English, I`m working hard on it and moving at breakneck pace.
           </p>
         </div>
         <!--projects-->
-
         <!--Work-->
         <div class="work">
           <h3 class="main-titles">Work Experience</h3>
+          <div>
+            <h4 class="experience-title">
+              My own project
+              <a href="https://ringbus.com.ua" class="organisation"> RingBus</a>
+            </h4>
+            <p class="experience-period">
+              JavaScript, JS Libraries, Responsive Web design, GitHub, HTML,
+              SCSS, CSS, npm
+              <span class="line">|</span>
+              <span class="experience-dates">20.02.2022 - up to now</span>
+            </p>
+            <ul class="work-list-style">
+              <li>
+                My own full working project for people, just click on link:
+                <a href="https://ringbus.com.ua" class="organisation"
+                  >RingBus↺</a
+                >
+              </li>
+            </ul>
+          </div>
           <div>
             <h4 class="experience-title">
               GoIT Academy
@@ -176,6 +196,14 @@
                 >GitHub page</a
               >
             </p>
+            <p>
+              <span class="contact-type">L:</span>
+              <a
+                href="https://www.linkedin.com/in/mykhailo-fysiuk-21535526b/"
+                class="contact-link"
+                >LinkedIn</a
+              >
+            </p>
           </div>
         </div>
         <!--Tech skills-->
@@ -191,7 +219,16 @@
 
             <li class="skills-item"><span class="skills-text">GitHub</span></li>
             <li class="skills-item">
-              <span class="skills-text">JavaScript - in progress..</span>
+              <span class="skills-text">JavaScript</span>
+            </li>
+            <li class="skills-item">
+              <span class="skills-text">Rest APIs</span>
+            </li>
+            <li class="skills-item">
+              <span class="skills-text">JS Libraries</span>
+            </li>
+            <li class="skills-item">
+              <span class="skills-text">Responsive Web design</span>
             </li>
             <li class="skills-item">
               <span class="skills-text">React.js - in progress..</span>
@@ -205,6 +242,9 @@
         <div class="soft-skills">
           <h3 class="sidebar-title">Soft Skills</h3>
           <ul class="skills-list">
+            <li class="skills-item">
+              <span class="skills-text">English Level - B1</span>
+            </li>
             <li class="skills-item">
               <span class="skills-text">TeamLead</span>
             </li>
